<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.inicio.InicioFragment">

    <FrameLayout
        android:id="@+id/child_ListaEventos"
        android:name="androidx.navigation.fragment.child_ListaEventos"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:defaultNavHost="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gifImageView"
        app:navGraph="@navigation/mobile_navigation">

    </FrameLayout>

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/gifImageView"
        android:layout_width="fill_parent"
        android:layout_height="234dp"
        android:src="@drawable/gif_tormenta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00000000"
        android:gravity="center_vertical"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewCiudad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="#00000000"
            android:hint="Sevilla"
            android:text="Not Found"
            android:textAlignment="center"
            android:textColor="@color/white_50"
            android:textColorHint="@color/white_50"
            android:textSize="34sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/textViewDesc"
            android:layout_width="288dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#00000000"
            android:hint="Mayormente Nublado"
            android:text="not found"
            android:textAlignment="center"
            android:textColor="@color/white_50"
            android:textColorHint="@color/white_50"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#00000000"
            android:fontFamily="sans-serif"
            android:text="-1"
            android:textAlignment="center"
            android:textColor="@color/white_50"
            android:textSize="70sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="#00000000"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="#00000000"
                android:hint="Min / Max:"
                android:paddingRight="10dp"
                android:text="Min / Max:"
                android:textColor="@color/white_50"
                android:textColorHint="@color/white_50"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textViewTempMaxMin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="#00000000"
                android:hint="12º / 21º"
                android:paddingLeft="10dp"
                android:text="--º / --º"
                android:textAlignment="center"
                android:textColor="@color/white_50"
                android:textColorHint="@color/white_50"
                android:textSize="20sp"
                android:textStyle="normal" />
        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>