<resources>
    <string name="app_name">Proyecto</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Kiko-Gaku</string>
    <string name="nav_header_subtitle"> - Luis Alfonso Huertas Delgado\n - Miguel Jara Arroyo\n - Pedro del Castillo Gómez\n - Jorge del Castillo Gómez</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_eventos">Eventos</string>
    <string name="menu_perfil">Perfil</string>
    <string name="menu_ajustes">Ajustes</string>

    <string name="menu_inicio">Inicio</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="textview">TextView</string>

    <!-- STRINGS DE LUIS-->
    <string name="n_iniciar_sesion">Iniciar sesión</string>
...
    <string name="numeroNotfound">-1</string>
    <string name="descripci_n_del_evento">Descripción del evento</string>
    <string name="iconoclima">IconoClima</string>
    <string name="botonanadirnuevoevento">BotonAnadirNuevoEvento</string>
    <string name="localidad">Localidad</string>
    <string name="introduce_la_contrase_a">Introduce la contraseña</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="registrarse">Registrarse</string>
    <string name="inicio_de_sesi_n">Inicio de Sesión</string>
    <string name="lightmode">Modo Claro</string>
    <string name="lightmode_sum">Activa modo claro en la aplicación</string>
</resources>
