...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentPassword" />

    <Button
        android:id="@+id/bEliminar"
        android:layout_width="146dp"
        android:layout_height="wrap_content"
        android:layout_margin="22sp"
        android:layout_marginTop="120dp"
        android:backgroundTint="#AE0101"
        android:text="Eliminar cuenta"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bGuardar" />
</androidx.constraintlayout.widget.ConstraintLayout>
